examples/invalid/mutate.juni
fn main : x =>
  mut i = 1 in (
    !i = *1 + 1;
    i
  )
